# summit-foxy-bridge

./: .gitignore  Dockerfile  Dockerfile.rpi  README.md  README.rpi.md  cyclonedds.rpi.xml  cyclonedds.xml  docker-compose.pc.bak.yml  docker-compose.rpi.yml  docker-compose.yml  entrypoint.sh  env.rpi.example  launch_all.pc.bak.sh  launch_all.rpi.sh  launch_all.sh
bridge/: topics.yaml
control/: bag_to_csv.py  figure_PIDs.m  ident_summit.m
control/pid_apriltag/: package.xml  pid_params.yaml  setup.cfg  setup.py
control/pid_apriltag/pid_apriltag/: pid_apriltag_node.py  wrapper.py  ws_server.py
control/step_input/: PID_summit.m  package.xml  setup.cfg  setup.py
control/step_input/step_input/: step_input_node.py
rviz_configs/: SPOT_TRACKING.rviz  apriltag_d435i.rviz  apriltag_ir_d435i.rviz  realsense_d435i.rviz
summit_control_ui/: README.md  app.py  config.yaml  requirements.txt  start.sh
summit_control_ui/static/: app.js  style.css
summit_control_ui/templates/: index.html
vision/: README.md
vision/apriltag/: tags_36h11_filter.yaml
vision/calibration/: spot_tags.yaml  start_tf_publisher.sh  summit_camera.yaml  tf_static_launch.py  tf_static_launch.py.save
vision/refiner/: package.xml  setup.cfg  setup.py
vision/refiner/apriltag_refiner/: pose_fuser_node.py  refiner_node.py
vision/supervisor/: package.xml  setup.cfg  setup.py
vision/supervisor/perception_supervisor/: perception_supervisor_node.py
vision/yolo/: package.xml  setup.py
vision/yolo/yolo_detector/: yolo_detector_node.py
