<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pid_apriltag</name>
  <version>0.1.0</version>
  <description>PID d'asservissement Summit XL pour suivre le Spot via /spot_target_pose</description>
  <maintainer email="ronan.le-guenne@polytech-lille.net">Ronan Le Guenne</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
