<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>step_input</name>
  <version>0.1.0</version>
  <description>Echelon cmd_vel pour identification systeme du Summit XL</description>
  <maintainer email="ronan.le-guenne@polytech-lille.net">Ronan Le Guenne</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
