<?xml version="1.0"?>
<package format="3">
  <name>apriltag_refiner</name>
  <version>0.1.0</version>
  <description>Raffinement de pose AprilTag avec la profondeur D435i</description>
  <maintainer email="ronan.le-guenne@polytech-lille.net">Ronan Le Guenne</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>apriltag_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
